refactor: Add explainer to contact list (SQCORE-475)

--- a/src/page/template/list/start-ui.htm
+++ b/src/page/template/list/start-ui.htm
@@ -43,6 +43,7 @@
               </div>
             <!-- /ko -->
             <!-- ko ifnot: showOnlyConnectedUsers() -->
+              <people-icon class="start-ui-no-contacts__icon"></people-icon>
               <div class="start-ui-no-search-results" data-bind="text: t('searchTrySearch')"></div>
             <!-- /ko -->
           <!-- /ko -->
