--- a/src/style/list/start-ui.less
+++ b/src/style/list/start-ui.less
@@ -159,8 +159,7 @@
 
 .start-ui-no-contacts,
 .start-ui-no-search-results {
-  margin-top: 40px;
-  margin-bottom: 16px;
+  margin-top: 50%;
   line-height: 24px;
   text-align: center;
   white-space: pre;
